# STG_Builder

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  sanitizer.conf
app/: CMakeLists.txt
app/builder/: CMakeLists.txt  main.cpp
app/builder/app/: App.cpp  App.hpp  DrawableRTree.hpp  EditableGame.cpp  EditableGame.hpp  EditableObject.hpp  EditorWindow.hpp  EventBus.hpp  GameBuilder.cpp  GameBuilder.hpp  ObjectEditor.cpp  ObjectEditor.hpp  StateManager.hpp  TimedAction.hpp
app/builder/editor/: ObjectEditor.cpp  ObjectEditor.hpp  ObjectEntry.cpp  ObjectEntry.hpp  ObjectEntryFactory.hpp  SideMenuTab.cpp  SideMenuTab.hpp
app/builder/utils/: StateManager.hpp
app/engine/: CMakeLists.txt  WindowInfo.hpp  main.cpp
app/engine/app/: App.cpp  App.hpp  AppFactory.cpp  AppFactory.hpp
app/engine/app/ui/: MainMenu.cpp
app/engine/game/: Game.cpp  Game.hpp
app/engine/level/: Level.cpp  Level.hpp  LevelLoader.cpp  LevelLoader.hpp  LevelManager.cpp  LevelManager.hpp
pkg/builder/: Asset.hpp  AssetLoader.hpp  CMakeLists.txt  ObjectTemplate.hpp
pkg/builder/assets/: Asset.hpp  AssetLoader.hpp  AssetManager.hpp  AssetProcessor.cpp  AssetStorage.hpp  Loadable.hpp
pkg/builder/generators/: EntityGenerator.cpp  EntityGenerator.hpp  FuncBuilder.cpp  FuncBuilder.hpp  FuncInfo.hpp  Handler.hpp  ObjectOptionsFactory.cpp  ObjectOptionsFactory.hpp  ObjectTemplateFactory.cpp  ObjectTemplateFactory.hpp  ObjectTypeFactory.cpp  ObjectTypeFactory.hpp
pkg/builder/objects/: ObjectOptions.cpp  ObjectOptions.hpp  ObjectTemplate.cpp  ObjectTemplate.hpp  ObjectType.cpp  ObjectType.hpp
pkg/core/: CMakeLists.txt
pkg/core/assets/: Asset.hpp  AssetLoader.hpp  AssetManager.hpp  AssetStorage.hpp  Loadable.hpp
pkg/core/base/: Collection.hpp  Displayable.hpp  Drawable.hpp  Hideable.hpp  Identifiable.hpp  LinAlg.hpp  Movable.hpp  Transformable.cpp  Transformable.hpp  Updatable.hpp
pkg/core/common/: Drawable.hpp  DrawableCollection.hpp  UiElement.hpp
pkg/core/events/: Event.hpp  Mediator.cpp  Mediator.hpp  Observable.cpp  Observable.hpp
pkg/core/game/: GameObject.hpp  ShapeObject.hpp  SpriteObject.hpp
pkg/core/game/collisions/: Geometry.hpp  RTree.hpp
pkg/core/game/collisions/hitbox/: Hitbox.cpp  Hitbox.hpp  HitboxFactory.cpp  HitboxFactory.hpp  HitboxProps.cpp  HitboxProps.hpp  ShapeHitbox.hpp
pkg/core/game/collisions/rtree/: Framed.hpp  RTree.hpp  RTreeGeometry.cpp  RTreeGeometry.hpp
pkg/core/game/hitbox/: Hitbox.cpp  Hitbox.hpp
pkg/core/game/mechanics/: Action.hpp  ActionFactory.cpp  ActionTypes.hpp  CollisionReaction.cpp  CollisionReaction.hpp  Controls.hpp  GameEvents.hpp  GetterDecorators.hpp  Health.hpp  Life.cpp  Life.hpp  Movement.cpp  Movement.hpp  Position.hpp  Properties.hpp  Score.hpp  Speed.hpp  Value.cpp  Value.hpp
pkg/core/game/mechanics/actions/: Action.hpp  ActionFactory.cpp  ActionFactory.hpp  ActionMap.hpp  ActionQueue.cpp  ActionQueue.hpp  ActionTypes.hpp  Decorators.cpp  Decorators.hpp  Getter.hpp  TimedAction.cpp  TimedAction.hpp
pkg/core/game/objects/: DisplayableFactory.cpp  DisplayableFactory.hpp  DummyDisplayable.hpp  EnemyObject.cpp  EnemyObject.hpp  GameBus.hpp  GameField.cpp  GameField.hpp  GameInfo.cpp  GameInfo.hpp  GameObject.cpp  GameObject.hpp  GameObjectBase.hpp  GameObjectTag.hpp  ImageContainer.hpp  Player.cpp  Player.hpp  ShapeObject.hpp  SpriteObject.hpp
pkg/core/game/ui/: Bar.hpp  Button.cpp  Button.hpp  ButtonFactory.hpp  Counter.hpp  GameUi.hpp  MaxCounter.hpp  StatDisplay.hpp  StatDisplayFactory.hpp  StatUi.hpp  Text.hpp  TextFactory.hpp  TextInput.cpp  TextInput.hpp  TextInputFactory.hpp  UiUtils.hpp
pkg/core/window/: Window.cpp  Window.hpp  WindowInfo.hpp  WindowSFML.cpp  WindowSFML.hpp
pkg/engine/: CMakeLists.txt
pkg/engine/assets/: AssetProcessor.hpp
pkg/engine/game/: EventBus.hpp  Game.cpp  Game.hpp  Game.tpp  GameEvents.hpp  GameFactory.cpp  GameFactory.hpp  GameInfo.cpp  GameInfo.hpp  GameState.cpp  GameState.hpp  GameUi.hpp  PlayerManager.cpp  PlayerManager.hpp  SideMenu.cpp  SideMenu.hpp
pkg/engine/generators/: FuncBuilder.cpp  FuncBuilder.hpp  FuncInfo.hpp  Handler.hpp  ObjectOptionsFactory.cpp  ObjectOptionsFactory.hpp  ObjectTypeFactory.cpp  ObjectTypeFactory.hpp  PatternFactory.cpp  PatternFactory.hpp  PlayerLoader.hpp
pkg/engine/level/: Level.cpp  Level.hpp  LevelLoader.cpp  LevelLoader.hpp  LevelManager.cpp  LevelManager.hpp
pkg/engine/objects/: ObjectOptions.cpp  ObjectOptions.hpp  ObjectType.cpp  ObjectType.hpp  Pattern.hpp
pkg/engine/objects/patterns/: ArcPosition.hpp  DelegatedPattern.hpp  FindNearest.hpp  FollowingParentMovement.hpp  FromCenterMovement.hpp  LinePosition.hpp  LinearMovement.hpp  ObjectCount.hpp  RandomMovement.hpp  RectanglePosition.hpp  RuleMovement.hpp  SpreadPosition.hpp  TargetedMovement.hpp  TrackingMovement.hpp
pkg/engine/ui/: DummyDisplayable.hpp  Form.hpp  GameOver.cpp  GameOver.hpp  HorizontalLayout.cpp  HorizontalLayout.hpp  Layout.cpp  Layout.hpp  Leaderboards.cpp  Leaderboards.hpp  MainMenu.cpp  MainMenu.hpp  PauseMenu.cpp  PauseMenu.hpp  ScoreInput.cpp  ScoreInput.hpp  ScrollableVerticalLayout.cpp  ScrollableVerticalLayout.hpp  SideMenu.cpp  SideMenu.hpp  VerticalLayout.cpp  VerticalLayout.hpp  WinScreen.cpp  WinScreen.hpp
pkg/ui/: CMakeLists.txt  Fonts.hpp  StatBox.hpp  test.cpp  test.hpp
pkg/ui/common/: Bus.hpp  Common.hpp  Fonts.hpp  ImguiUtils.cpp  ImguiUtils.hpp  Map.hpp  UiElement.hpp
pkg/ui/elements/: ActionInput.cpp  ActionInput.hpp  ActionMapInput.hpp  Box.cpp  Box.hpp  Button.cpp  Button.hpp  Clickable.hpp  ErrorPopup.hpp  FuncInput.cpp  FuncInput.hpp  GameInfo.cpp  GameInfo.hpp  KeyMapInput.cpp  KeyMapInput.hpp  LangChanger.hpp  LevelInfo.cpp  LevelInfo.hpp  Menu.cpp  Menu.hpp  ObjectEditor.hpp  PatternInput.cpp  PatternInput.hpp  StatBox.hpp  Stats.hpp  StringPoint.cpp  StringPoint.hpp  Tabs.hpp  TimedActionInput.cpp  TimedActionInput.hpp
pkg/ui/elements/tabs/: EntitiesTab.cpp  EntitiesTab.hpp  EntityEntry.cpp  EntityEntry.hpp  EntriesTab.hpp  LevelTab.cpp  LevelTab.hpp  MainTab.cpp  MainTab.hpp  PlayerTab.cpp
pkg/ui/mixin/: Image.hpp
(+30 files in other folders)
